demo/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    "knative-eventing-injection": "enabled"
  name: lambda-test
spec: {}
