demo/non-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: testlambda
  name: testlambda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testlambda
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: testlambda
    spec:
      containers:
        - image: aerfio/testsrv-7f6cabcf405589baaaaa2261b4cb85a2@sha256:f772948e3a2cf1bdff0270d4b9d89c269d423e0cbb9b46cb6aa066a1feb614c4 # source: main.go
          imagePullPolicy: Always
          name: testlambda
          resources:
            requests:
              cpu: 7m
              memory: 40Mi
            limits:
              cpu: 9m
              memory: 60Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: testlambda
  name: lambdatest
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: testlambda
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: lambda-destination-rule
spec:
  host: lambdatest.lambda-test.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
